--- a/algorithm_bag.tex
+++ b/algorithm_bag.tex
@@ -165,10 +165,36 @@
     \State $\widetilde{\beta} \gets \beta$ \Comment{ Make a copy of $\beta$ }
       \Do
         \For{ $i \in 1, 2, \dots, p$ }
-          \State $t \gets \frac{ \lambda }{ \LTwoSqr{ X_i } }$ \Comment{ Scale grid element by norm of the i'th column of design matrix }
+          \State $t \gets \frac{ \lambda }{ 2 \LTwoSqr{ X_i } }$ \Comment{ Scale grid element by norm of the i'th column of design matrix }
           \State $X_{-i} \gets X_{ \forall j \neq i}$ \Comment{ Take all columns of design matrix not equal to $i$ }
           \State $\widetilde{\beta}_{-i} \gets \widetilde{\beta}_{ \forall j \neq i}$ \Comment{ Take all elements of predictors vectors not equal to $i$ }
-          \State $r \gets \frac{ X_i^T\left( Y - X_{-i} \beta_{-i}\right) }{ \LTwoSqr{ X_i } }$ \Comment{ Compute the scaled residual }
+          \State $r \gets \frac{ X_i^T\left( Y - X_{-i} \widetilde{\beta}_{-i}\right) }{ \LTwoSqr{ X_i } }$ \Comment{ Compute the scaled residual }
+          \State $\widetilde{\beta}_i \gets \tau \left( r, t \right)$ \Comment{ Update the i'th element of Beta }
+        \EndFor
+      \doWhile{ DG $( X, Y, \widetilde{\beta}, \lambda ) > \mathcal{D}$ }\\
+  \end{algorithmic}
+  \Return $\widetilde{\beta}$
+\end{algorithm}
+\FloatBarrier
+
+\FloatBarrier
+\begin{algorithm}[!htbp]
+  \caption{Coordinate Descent with standardized data}
+  \begin{algorithmic}[1]
+  \Statex
+  \Input\tikzmark{k}
+  \Statex $X \in \mathbb{R}^{n \times p} $ \Comment{ The standardized design matrix }
+  \Statex $Y \in \mathbb{R}^n$  \Comment{ The vector of predictors }
+  \Statex $\beta \in \mathbb{R}^n$  \Comment{ Starting vector }
+  \Statex $\lambda \in \mathbb{R}$  \Comment{ Grid element }
+  \Statex $\mathcal{D} \in \mathbb{R}$  \Comment{ Duality gap target }\tikzmark{l}
+    \State $\widetilde{\beta} \gets \beta$ \Comment{ Make a copy of $\beta$ }
+      \Do
+        \For{ $i \in 1, 2, \dots, p$ }
+          \State $t \gets \frac{ \lambda }{ n }$ \Comment{ Scale grid element by norm of the i'th column of design matrix }
+          \State $X_{-i} \gets X_{ \forall j \neq i}$ \Comment{ Take all columns of design matrix not equal to $i$ }
+          \State $\widetilde{\beta}_{-i} \gets \widetilde{\beta}_{ \forall j \neq i}$ \Comment{ Take all elements of predictors vectors not equal to $i$ }
+          \State $r \gets \frac{ X_i^T\left( Y - X_{-i} \beta_{-i}\right) }{ n }$ \Comment{ Compute the scaled residual }
           \State $\widetilde{\beta}_i \gets \frac{1}{2}\tau \left( 2 \times r, t \right)$ \Comment{ Update the i'th element of Beta }
         \EndFor
       \doWhile{ DG $( X, Y, \widetilde{\beta}, \lambda ) > \mathcal{D}$ }\\
