--- a/algorithm_bag.tex
+++ b/algorithm_bag.tex
@@ -203,6 +203,52 @@
 \end{algorithm}
 \FloatBarrier
 
+Note for this algorthim we establish the convention that array of a given data type
+will be declared as follows:
+\begin{center}
+( \textit{type} )[ \textit{\# elements in array} ]
+\end{center}
+
+As an example an array of real numbers numbers of size $n \in \mathbb{N}$
+would be written as:
+\begin{center}
+( $\mathbb{R}$ )[ $n$ ]
+\end{center}
+
+\FloatBarrier
+\begin{algorithm}[!htbp]
+  \caption{Coordinate Descent with minimal data copying}
+  \begin{algorithmic}[1]
+  \Statex
+  \Input\tikzmark{k}
+  \Statex $X \in \mathbb{R}^{n \times p} $ \Comment{ The design matrix }
+  \Statex $Y \in \mathbb{R}^n$  \Comment{ The vector of predictors }
+  \Statex $\beta \in \mathbb{R}^n$  \Comment{ Starting vector }
+  \Statex $\lambda \in \mathbb{R}$  \Comment{ Grid element }
+  \Statex $\mathcal{D} \in \mathbb{R}$  \Comment{ Duality gap target }\tikzmark{l}
+    \State $\gimel \gets (\mathbb{R})[ p ]$ \Comment{ Initialize array of size p to hold threshold parameters }
+    \State $p_1 \in (\mathbb{R})[ p ]$ \Comment{ Blank array for part of residual computation }
+    \State $p_2 \in (\mathbb{R}^{ 1 \times p})[ p ]$ \Comment{ Blank array to row vectors of size p which will be used for part of residual computation }
+    \For{ $i \in 1, 2, \dots, p$ }
+      \State $\beth \gets \frac{1}{\LTwoSqr{X_i}}$
+      \State $\gimel [ i ] \gets \frac{1}{2} \beth$
+      \State $p_1[ i ] \gets \beth X_i^T Y$
+      \State $p_2[ i ] \gets \beth X_i^T X$
+    \EndFor
+    \State $\widetilde{\beta} \gets \beta$ \Comment{ Make a copy of $\beta$ }
+      \Do
+        \For{ $i \in 1, 2, \dots, p$ }
+          \State $\widetilde{\gamma} \gets \widetilde{\beta}_j$ \textbf{if} $j \neq i$ \textbf{else} 0 \Comment{Copy all of beta expect i'th element which is assigned to 0}
+          \State $r \gets p_1[ i ] - p_2[ i ]\widetilde{\gamma}$ \Comment{ Compute the scaled residual }
+          \State $t \gets \lambda \gimel [ i ]$ \Comment{Compute threshold parameter}
+          \State $\widetilde{\beta}_i \gets \tau \left( r, t \right)$ \Comment{ Update the i'th element of Beta }
+        \EndFor
+      \doWhile{ DG $( X, Y, \widetilde{\beta}, \lambda ) > \mathcal{D}$ }\\
+  \end{algorithmic}
+  \Return $\widetilde{\beta}$
+\end{algorithm}
+\FloatBarrier
+
 \FloatBarrier
 \begin{algorithm}[!htbp]
   \caption{FISTA with backtracking line search and duality gap convergence criteria}
