Added testing specification

--- a/algorithm_bag.tex
+++ b/algorithm_bag.tex
@@ -273,7 +273,7 @@ would be written as:
 
 \FloatBarrier
 \begin{algorithm}[!htbp]
-  \caption{Coordinate Descent with minimal data copying}
+  \caption{Coordinate Descent with Minimal Data Copying}
   \begin{algorithmic}[1]
   \Statex
   \Input\tikzmark{k}
